# alancarrml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
data/processed/: x_test.csv  x_val.csv  y_test.csv  y_train.csv  y_val.csv
docs/: Makefile  conf.py  example.ipynb  make.bat
models/: linear_poly_2.joblib  ohe.joblib  scaler.joblib
notebooks/: 1_baseline.ipynb  2_linear_poly.ipynb
src/alancarrml/: __init__.py
src/alancarrml/data/: sets.py  sets_beta.py
src/alancarrml/features/: dates.py
src/alancarrml/models/: performance.py
tests/: test_alancarrml.py
tests/data/: test_sets.py
